sumo/tests/sumo/extended/wauts/errors/wauts/cross3ltl_error_missing_startprog/errors.sumo
Error: Missing start program for WAUT 'w1'.
Quitting (on error).
